--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3260,7 +3260,7 @@ input, select, textarea {
 		-ms-user-select: none;
 		user-select: none;
 		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-		background: rgba(46, 49, 65, 0.8);
+		background: rgba(74, 78, 100, 0.8);
 		cursor: default;
 		height: 100%;
 		left: 0;
@@ -3270,6 +3270,9 @@ input, select, textarea {
 		top: 0;
 		visibility: hidden;
 		width: 100%;
+
+		padding-top: 0.25em;   /* Space above the menu */
+  		padding-right: 0.5em; /* Space to the right */
 	}
 
 		#menu .inner {
@@ -3289,7 +3292,8 @@ input, select, textarea {
 			max-width: 100%;
 			opacity: 0;
 			position: relative;
-			width: 18em;
+			width: 10em;
+			/*width: 18em;*/
 		}
 
 		#menu h2 {
