--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2453,6 +2453,16 @@ input, select, textarea {
 				width: 100%;
 			}
 
+		.image.fitless {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+			.image.fitless img {
+				width: 75%;
+			}
+
 		.image.main {
 			display: block;
 			margin: 0 0 3em 0;
