--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4069,7 +4069,8 @@ input, select, textarea {
 		#footer .inner .copyright {
 			border-top: solid 2px rgba(255, 255, 255, 0.125);
 			list-style: none;
-			margin: 4em 0 2em 0;
+			margin: 0em 0 2em 0; 
+			/*This above used to be 4em 0 2em 0;*/
 			padding: 2em 0 0 0;
 			width: 100%;
 		}
