--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2455,7 +2455,7 @@ input, select, textarea {
 
 		.image.fitless {
 			display: flex;
-			margin: 0 0 0 0;
+			margin: 2em 0 2em 0;
 			width: 100%;
 			justify-content: center;
 		}
