--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4198,3 +4198,10 @@ input, select, textarea {
 		}
 
 	}
+
+	.katex-display {
+	  display: block;
+	  max-width: 100%;
+	  overflow-x: auto;
+	  font-size: 0.9em;
+	}
